Añadidos archivos de configuracion para contenedor de BD, incluyendo creacion de tablas y poblacion inicial

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
-spring.application.name=base-backend
+# Configuración de conexión para BASE [cite: 436, 444]
+spring.datasource.url=jdbc:postgresql://localhost:5433/base_futbol_db
+spring.datasource.username=admin
+spring.datasource.password=base_pass
+
+# Configuración adicional de JPA [cite: 436]
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
